# multi-rate-limit

./: .coverage  .gitignore  README.md  coverage.xml  pyproject.toml
.github/workflows/: python-package.yml  static.yml
depending_licenses/: python-BSD
docs/: modules.rst  multi_rate_limit.rst  tests.rst
docs/source/: conf.py  index.rst
multi_rate_limit/: __init__.py  multi_rate_limit.py  rate_limit.py  resource_queue.py
source/multi_rate_limit/: multi_rate_limit.py
tests/: test_multi_rate_limit.py  test_rate_limit.py  test_resource_queue.py
tests/test_rate_limit/: original.tsv
